# bve-autopilot

./: .gitignore  CLAUDE.md  CURRENT_STRUCTURE.md  README.md  RUST_MIGRATION_GUIDE.md  RUST_MIGRATION_PLAN.md
bve-autopilot/: Main.cpp  Main.h  パネル出力.cpp  共通状態.cpp  共通状態.h  出力制御.cpp  早着防止.cpp  運動状態.cpp
bve-autopilot-rs/: Cargo.toml  PHASE1_COMPLETION.md  README.md
bve-autopilot-rs/benches/: control_benchmarks.rs
bve-autopilot-rs/src/: ffi.rs  lib.rs
bve-autopilot-rs/src/types/: beacon.rs  control_command.rs  mod.rs  physical_quantity.rs
bve-autopilot-rs/src/utils/: mod.rs  observable.rs  section.rs
bve-autopilot-rs/tests/: integration_test.rs
docs/: MIGRATION_TODO.md  RUST_MIGRATION_GUIDE.md
